sample/retrieveUnpackaged/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Created_Date__c</fullName>
        <formula>DATETIMEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <description>Indicates whether the call being logged is Inbound or Outbound</description>
        <inlineHelpText>Indicates whether the call being logged is Inbound or Outbound</inlineHelpText>
        <label>Call Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Called__c</fullName>
        <label>Called</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller__c</fullName>
        <label>Caller</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Level_1__c</fullName>
        <description>Same picklists as What list on Case</description>
        <inlineHelpText>Category level 1: What is the activity about?</inlineHelpText>
        <label>What</label>
        <picklist>
            <controllingField>Group__c</controllingField>
            <picklistValues>
                <fullName>Account Payments &amp; Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales &amp; Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plumbing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge sharing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy Reform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Hardship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Level_2__c</fullName>
        <description>Same picklists as Case &quot;Category Level 2&quot;</description>
        <inlineHelpText>Category level 2: Why is the activity occurring? (not the root cause)</inlineHelpText>
        <label>Why</label>
        <picklist>
            <controllingField>Category_Level_1__c</controllingField>
            <picklistValues>
                <fullName>Account/Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns &amp; Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Recovery Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Receive Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efficiency Programs &amp; Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Give Explanation of Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot Issues - Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Statement Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Readings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move In / Move Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Customer/Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Off/On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Restrictions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tappings/Pluggings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metering</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Level_3__c</fullName>
        <description>Same picklists as Case &quot;Category Level 3&quot;</description>
        <inlineHelpText>Category level 3: The solution, the response, the process - create a case or process if needed.</inlineHelpText>
        <label>How</label>
        <picklist>
            <controllingField>Category_Level_2__c</controllingField>
            <picklistValues>
                <fullName>Acceptance of Works</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access to Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Balance/Due Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Password</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Amend Concession Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Hoc Billing Explained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amend Direct Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amend Meter Reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amend Property Description</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backlog Sewer Charges Explained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Debt Recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy and  Liquidations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bookings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build overs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Opt In/Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caveat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate of Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Occupier Explained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check for Tampering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consent to connect Water or Sewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Classifaction Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Read</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Class_Code__c</fullName>
        <description>The is so that we can create a new classification class from Pulse, but allow it to be mastered in HiAff...</description>
        <label>Class Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_Date__c</fullName>
        <label>Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_Status__c</fullName>
        <formula>if( IsClosed =true, &quot;Completed&quot;, &quot;Not Completed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connections__c</fullName>
        <label>Connections</label>
        <picklist>
            <picklistValues>
                <fullName>Choose not to-existing/new septic system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choose not to-ongoing costs too much</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choose not to-too costly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choose not to-selling the property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choose to connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concerned about the costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connections process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inclusion in the scheme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plans to build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinstatement - other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinstatement - quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinstatement - subsidence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinstatement - timing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for letter to Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request to join if outside the scheme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Created_By_User_Type__c</fullName>
        <formula>TEXT( CreatedBy.UserType )</formula>
        <label>Created By User Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_on_Portal__c</fullName>
        <formula>IF( Text(CreatedBy.UserType) =&quot;CSPLitePortal&quot;|| Text(CreatedBy.UserType)=&quot;PowerPartner&quot;, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Tells if the record is created via portal.</inlineHelpText>
        <label>Created on Portal?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_comments__c</fullName>
        <label>Customer comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <defaultValue>now()</defaultValue>
        <description>The date the event occurred</description>
        <inlineHelpText>The date the event occurred</inlineHelpText>
        <label>Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exception_Reason__c</fullName>
        <label>Exception Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FORMULA_LINK_Case_Record__c</fullName>
        <formula>IF(NOT(ISBLANK(HIDDEN_Case_Type_Task_ID__c)),
HYPERLINK(&quot;/&quot;+ HIDDEN_Case_Type_Task_ID__c , &quot;Go to Case Record&quot;,&quot;_self&quot;),&quot;&quot;)</formula>
        <label>Case Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General__c</fullName>
        <label>General</label>
        <picklist>
            <picklistValues>
                <fullName>Construction enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Billing &amp; Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Account management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faults and Emergencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stakeholder Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HIDDEN_Case_Type_Task_ID__c</fullName>
        <externalId>true</externalId>
        <label>(Hidden) Case Type Task ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIDDEN_Is_Case_Duplicate_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Hidden) Case Duplicate Task?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HIDDEN_Is_Count_as_Call__c</fullName>
        <defaultValue>true</defaultValue>
        <label>(Hidden) Count as Call?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HIDDEN_Letter_Code_Sent__c</fullName>
        <label>(Hidden) Letter Code Sent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIDDEN_Refused_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(HIDDEN) Refused Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HiAF_Account_Number__c</fullName>
        <description>The is so that we can create a new classification class from Pulse, but allow it to be mastered in HiAff...</description>
        <label>HiAF Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_CC_Amount__c</fullName>
        <label>(Hidden) CC Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hidden_CC_Number__c</fullName>
        <description>Only the first 4 and last 3 digits</description>
        <label>(Hidden) CC Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_CC_Payment_Receipt_Number__c</fullName>
        <label>(Hidden) CC Payment Receipt Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_DD_Action_Type__c</fullName>
        <label>(Hidden) DD Action Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hidden_DD_Commencement_Date__c</fullName>
        <label>(Hidden) DD Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hidden_DD_Details__c</fullName>
        <label>(Hidden) DD Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hidden_DD_Type__c</fullName>
        <label>(Hidden) DD Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bank Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hidden_Direct_Debit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field to update direct debit fields on the billing account</description>
        <label>(Hidden) Direct Debit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_Messages__c</fullName>
        <description>Any messages from integration</description>
        <label>(Hidden) Messages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hot_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hot Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interaction_Type__c</fullName>
        <label>Interaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercantile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notification Letters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Letter/Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MobileApp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The is so that we can create a new classification class from Pulse, but allow it to be mastered in HiAff...</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Key_Customer_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if the Event is a Key Customer Visit</inlineHelpText>
        <label>Is Key Customer Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_User_Name__c</fullName>
        <formula>LastModifiedBy.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_User_Type__c</fullName>
        <formula>TEXT(LastModifiedBy.UserType)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By User Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Review_Date__c</fullName>
        <inlineHelpText>The Last Review Date for the Financial Hardship activity</inlineHelpText>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Letter_Sent__c</fullName>
        <label>Letter Sent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Sent_to__c</fullName>
        <label>Sent to</label>
        <picklist>
            <picklistValues>
                <fullName>Billing Address</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Mailing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Primary Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MD_CEO_Meeting_Attendees__c</fullName>
        <label>Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MD_CEO_Visits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MD / CEO Visits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Query</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Action</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_eBill_Method__c</fullName>
        <description>The type of eBill Method after it was modified</description>
        <inlineHelpText>The type of eBill Method after it was modified</inlineHelpText>
        <label>New eBill Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPAY View</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Review_Action__c</fullName>
        <label>Next Review Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Review_Date__c</fullName>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_Contacts__c</fullName>
        <label>No. of Contacts</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>more than 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Old_Owner__c</fullName>
        <label>Old Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Person_Name__c</fullName>
        <inlineHelpText>3rd Party Person Name which has not been created as Person in Salesforce.</inlineHelpText>
        <label>Other Person Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Exception_Reason__c</fullName>
        <label>Previous Exception Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Next_Review_Action__c</fullName>
        <label>Previous Next Review Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Next_Review_Date__c</fullName>
        <label>Previous Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Status__c</fullName>
        <label>Previous Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_eBill_Method__c</fullName>
        <description>The type of eBill Method before it was modified</description>
        <inlineHelpText>The type of eBill Method before it was modified</inlineHelpText>
        <label>Previous eBill Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPAY View</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>The is so that we can create a new classification class from Pulse, but allow it to be mastered in HiAff...</description>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Comments__c</fullName>
        <description>Copied from Comments</description>
        <label>Short Comments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspend_To_Date__c</fullName>
        <label>Suspend To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team_response_resolution__c</fullName>
        <label>Team response / resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tone__c</fullName>
        <label>Tone</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outrage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>UCID__c</fullName>
        <label>UCID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ECO_All_Open_Tasks_and_Events</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.ECO_Task,Event.ECO_Event</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Escalated,Waiting on someone else,Deferred</value>
        </filters>
        <label>ECO - All Open Tasks and Events</label>
        <sharedTo>
            <group>ECO_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ECO_All_Tasks_and_Events</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.ECO_Task,Event.ECO_Event</value>
        </filters>
        <label>ECO - All Tasks and Events</label>
        <sharedTo>
            <group>ECO_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
</CustomObject>